# templatesvc

./: CMakeLists.txt  README.md  build.sh
src/: templatesvc.c
test/: test.json
